2nd commit. Lab solved.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="panel controls">
       <ul>
         <li>
-          <button class="btn btn-pepperoni active">pepperoni</button>
+          <button class="btn btn-pepperoni active">Pepperoni</button>
         </li>
         <li>
           <button class="btn btn-mushrooms active">Mushrooms</button>
@@ -41,11 +41,11 @@
 
       <b>$10 cheese pizza</b>
       <ul>
-        <li>$1 pepperoni</li>
-        <li>$1 mushrooms</li>
-        <li>$1 green peppers</li>
-        <li>$3 white sauce</li>
-        <li>$5 gluten-free crust</li>
+        <li id="peperoni-unit-price">$1 pepperoni</li>
+        <li id="mushrooms-unit-price">$1 mushrooms</li>
+        <li id="green-pepper-unit-price">$1 green peppers</li>
+        <li id="white-sauce-unit-price">$3 white sauce</li>
+        <li id="gluten-free-crust-unit-price">$5 gluten-free crust</li>
       </ul>
       <strong>$21</strong>
     </aside>
